tests/baselines/reference/parserAmbiguityWithBinaryOperator4.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguityWithBinaryOperator4.ts(3,9): error TS2347: Untyped function calls may not accept type arguments.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguityWithBinaryOperator4.ts (1 errors) ====
    function g() {
        var a, b, c;
        if (a<b, b>(c + 1)) { }
            ~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    }